[package]
name = "cursinator"
version = "0.1.0"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
ureq = { version = "2", features = ["json"] }
anyhow = "1"
#is_sorted = "0.1"
#fasthash = "0.4"
sha1 = "0.6"
libc = "0.2"
filetime = "0.2"
chrono = "0.4"
log = "0.4"
env_logger = "0.8"
termion = "1.5"
rustc-hash = "1.1"
regex = "1.4"
furse = "1.5.5"
futures = "0.3"
reqwest = { version = "~0.11.12", default-features = false, features = [
    "json",
    "rustls-tls",
] } # TODO ability to use reqwest error codes in furse without also importing it as dependency
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
