[package]
name = "cursinator"
version = "0.2.0"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
anyhow = "1"
#is_sorted = "0.1"
#fasthash = "0.4"
sha1 = "0.10"
hex = "0.4"
libc = "0.2"
filetime = "0.2"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
termion = "2"
rustc-hash = "1.1"
regex = "1.4"
furse = { git = "https://github.com/CursedOnes/furse", rev = "b18b02ef" }
futures = "0.3"
reqwest = { version = "~0.11.12", default-features = false, features = [
    "json",
    "rustls-tls",
] } # TODO ability to use reqwest error codes in furse without also importing it as dependency
tokio = { version = "1", features = ["full"] }
httpdate = "1"

[profile.release]
codegen-units = 1
lto = true
