[package]
name = "cursinator"
version = "0.3.0"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
serde_jsonrc = { git = "https://github.com/qwertz19281/serde-jsonrc", rev = "131ffb5f" }
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
anyhow = "1"
#is_sorted = "0.1"
#fasthash = "0.4"
sha1 = "0.10"
hex = "0.4"
libc = "0.2"
filetime = "0.2"
chrono = "0.4"
log = "0.4"
env_logger = "0.10.0"
termion = "2"
rustc-hash = "1.1"
regex = "1.4"
furse = { git = "https://github.com/CursedOnes/furse", rev = "808e18b6" }
futures = "0.3"
httpdate = "1"

[profile.release]
codegen-units = 1
lto = true
